display: do not focus default window when focus reverts to root

When window that is direct child of root window and have input
focus with revert_to set to RevertToParent closes focus will revert
to root window. This used to be problem when metacity did not
manage override redirect windows.

Now fix in commit 714fb3d539cdaf7fafe6205d114e6a29276bd7b7 is
obsolete as metacity these days have MetaWindow also for override
redirect windows, meaning that focus will be moved to another
window when any focused window will close.

Also debug message is misleading, it has nothing to do with
gnome-session. For example closing any client side decorated GTK
window will log this debug message and may move focus to wrong
window as we no longer have not_this_one window.

Original bug:
https://bugzilla.gnome.org/show_bug.cgi?id=153220